# rust-club

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  about.toml  bacon.toml  rustfmt.toml
01-greeter/: main.rs
02-calculator/: main
03-todo-list/: todo.json
04-word-counter/: Cargo.toml
04-word-counter/src/: main.rs
05-guessing-game/src/: main.rs
06-baseball-stats-tracker/: Cargo.toml  players.json
06-baseball-stats-tracker/src/: lib.rs
07-mickster-watchlist/src/: lib.rs  main.rs  movie.rs  watchlist.rs
08-golf-score-tracker/: .gitignore  Cargo.toml  README.md
08-golf-score-tracker/examples/: advanced_stats.rs  basic_usage.rs  iterator_patterns.rs
08-golf-score-tracker/golf_data/players/: 701ce960-f83f-43f4-9de2-e97a48142955.json  c89adae3-bc56-416d-9e8d-e4719ad40410.json
08-golf-score-tracker/golf_data/scorecards/: cfc34eed-d515-40aa-92d7-1a31f51b0478.json
08-golf-score-tracker/src/: error.rs  lib.rs  main.rs
08-golf-score-tracker/src/models/: hole.rs  mod.rs  player.rs  round.rs  scorecard.rs  statistics.rs
08-golf-score-tracker/src/storage/: mod.rs  repository.rs
08-golf-score-tracker/src/ui/: cli.rs  mod.rs
08-golf-score-tracker/src/utils/: course.rs  mod.rs  validators.rs
proyectos-tontos/: README.md
proyectos-tontos/02-calculator/src/: calculator.rs  main.rs
proyectos-tontos/03-todo-list/: Cargo.toml
proyectos-tontos/04-word-counter/: from-earth-to-the-moon.txt
proyectos-tontos/06-baseball-stats-tracker/: Cargo.toml
proyectos-tontos/07-mickster-watchlist/: Cargo.toml
(+11 files in other folders)
