[package]
name = "golf-score-tracker"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"  
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] } 
uuid = { version = "1.11", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] } 
color-eyre = "0.6"

[dev-dependencies]
pretty_assertions = "1.4" 